Поправил текст вывода в файле Conclusions.md